<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_titlebar"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:background="#ED4255" >

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ellipsize="marquee"
        android:gravity="center_horizontal|center"
        android:singleLine="true"
        android:text="@string/txt_bar_title"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/app_back"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:background="@drawable/main_head_back_bg"
        android:drawableLeft="@drawable/icon_arrow_back"
        android:drawablePadding="6dp"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:text="@string/txt_btn_back"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/app_search"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@drawable/main_head_back_bg"
        android:drawablePadding="6dp"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:text="@string/txt_btn_search"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        android:visibility="invisible" />

</RelativeLayout>