<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFFFF"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/main_list_head"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:id="@+id/main_head_icon0"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="#FFFFFFFF"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/main_head_icon0"
                android:contentDescription="@string/txt_empty" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/main_head_icon0"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_head_icon1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="#FFFFFFFF"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/main_head_icon1"
                android:contentDescription="@string/txt_empty" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/main_head_icon1"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_head_icon2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="#FFFFFFFF"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/main_head_icon2"
                android:contentDescription="@string/txt_empty" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/main_head_icon2"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_head_icon3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="#FFFFFFFF"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/app_icon"
                android:contentDescription="@string/txt_empty" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/main_head_icon3"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>